<resources>
    <string name="app_name">HRPA</string>
    <string name="management">Employee Management</string>
    <string name="appraisal">Employee Appraisal</string>
    <string name="Employee">Employee Details</string>
    <string name="about">About Us</string>
    <string name="taskAssigned">Assigned Task</string>
    <string name="taskStatus">Task Status</string>
    <string name="profile">Profile</string>
    <string name="aboutCompany">About Us</string>
    <string name="appraisalRating">Appraisal Rating</string>
    <string name="createTasks">Tasks</string>
    <string name="employeeDetails">Employee Details</string>
    <string name="aboutUs">About Us</string>
    <string name="name">eId</string>


</resources>
